💄🐛🚧 temporary navigation bar spacing fix. bar needs rewrite

--- a/src/views/Navigation/Navigation.module.scss
+++ b/src/views/Navigation/Navigation.module.scss
@@ -6,7 +6,7 @@
     position: absolute;
     flex-direction: row;
     bottom: 0;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: center;
     width: 100vw;
   }
